fixed line break on user dropdown

--- a/src/App.scss
+++ b/src/App.scss
@@ -274,7 +274,7 @@ header {
               color: white;
               top: 0;
               transform: translateY(95%);
-              width: fit-content;
+              width: max-content;
               display: flex;
               justify-content: space-around;
               flex-direction: column;
